netflow collector config and pretag map generation done

--- a/skins/oph/template.html
+++ b/skins/oph/template.html
@@ -128,9 +128,9 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="sidebar-link" href="?module=test">
+              <a class="sidebar-link" href="?module=settings">
                 <span class="icon-holder">
-                  <i class="c-brown-500 ti-palette"></i>
+                  <i class="c-brown-500 ti-layout-list-thumb"></i>
                 </span>
                 <span class="title">Settings</span>
               </a>
