backport of process monitor

--- a/skins/oph/template.html
+++ b/skins/oph/template.html
@@ -130,12 +130,19 @@
             <li class="nav-item">
               <a class="sidebar-link" href="?module=settings">
                 <span class="icon-holder">
-                  <i class="c-brown-500 ti-layout-list-thumb"></i>
+                  <i class="c-orange-500 ti-layout-list-thumb"></i>
                 </span>
                 <span class="title">Settings</span>
               </a>
             </li>
-          
+            <li class="nav-item">
+              <a class="sidebar-link" href="?module=processmon">
+                <span class="icon-holder">
+                  <i class="c-red-500  ti-share"></i>
+                </span>
+                <span class="title">Background processes</span>
+              </a>
+            </li>
           </ul>
           <?php
               }
