proto filter report draft

--- a/skins/oph/template.html
+++ b/skins/oph/template.html
@@ -128,6 +128,14 @@
               </a>
             </li>
             <li class="nav-item">
+              <a class="sidebar-link" href="?module=protofilter">
+                <span class="icon-holder">
+                  <i class="c-indigo-500 ti-bar-chart"></i>
+                </span>
+                <span class="title">Filter by protocols</span>
+              </a>
+            </li>
+            <li class="nav-item">
               <a class="sidebar-link" href="?module=settings">
                 <span class="icon-holder">
                   <i class="c-orange-500 ti-layout-list-thumb"></i>
