dashboard: improved UX

--- a/skins/oph/template.html
+++ b/skins/oph/template.html
@@ -193,15 +193,28 @@
                 </a>
                 <ul class="dropdown-menu fsz-sm" aria-labelledby="dropdownMenuLink">
                   <li>
+                    <a href="?module=usermanager&edituserdata=<?= whoami(); ?>" class="d-b td-n pY-5 bgcH-grey-100 c-grey-700">
+                      <i class="ti-user mR-10"></i>
+                      <span>My profile</span>
+                    </a>
+                  </li>
+
+                  <li>
                     <a href="?module=usermanager" class="d-b td-n pY-5 bgcH-grey-100 c-grey-700">
-                      <i class="ti-settings mR-10"></i>
-                      <span>Setting</span>
+                      <i class="ti-thumb-up mR-10"></i>
+                      <span>User manager</span>
                     </a>
                   </li>
                   <li>
-                    <a href="?module=usermanager&edituserdata=<?= whoami(); ?>" class="d-b td-n pY-5 bgcH-grey-100 c-grey-700">
-                      <i class="ti-user mR-10"></i>
-                      <span>Profile</span>
+                    <a href="?module=settings" class="d-b td-n pY-5 bgcH-grey-100 c-grey-700">
+                      <i class="ti-menu-alt mR-10"></i>
+                      <span>Settings</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="?module=sysconf" class="d-b td-n pY-5 bgcH-grey-100 c-grey-700">
+                      <i class="ti-settings mR-10"></i>
+                      <span>System configs</span>
                     </a>
                   </li>
             
